# sqlizer-client-py

./: .gitignore  LICENSE  README.md  setup.cfg
src/sqlizer/: __init__.py  apiurls.py  config.py  conversionstatus.py  databasetype.py  file.py  filetype.py  propertynames.py
src/tests/: test.json  test.xlsx  test_file_conversion.py
