[metadata]
name = sqlizer-io-client
version = 1.0.0
author = D4 Software
author_email = support@sqlizer.io
description = A python client library for the SQLizer.io data conversion tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sqlizer.io/
project_urls =
    Source = https://github.com/sqlizer-io/sqlizer-client-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src